# pyls_project

./: README.md  pyproject.toml  structure.json
pyls/: pyls.py
tests/: test_pyls.py
