[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "pyls"
version = "0.1.0"
description = "A Python-based implementation of the 'ls' command."
authors = [
    {name = "Somebuddha Paul", email = "somebuddhapaul@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pytest > 8.2"
]
[tool.poetry.scripts]
pyls = "pyls.pyls:main"

[tool.pytest.ini_options]
testpaths = ["tests"]